# jpeg-decoder

./: CMakeLists.txt  README.md
baseline/: bitreader.cpp  bitreader.h  decoder.cpp  fft.cpp  huffman.cpp  reader.cpp  reader.h  sources.cmake
baseline/tests/: test_baseline.cpp
tests/: out.txt
utils/: test_commons.cpp
